--- a/VLaboralWeb/App/Profesionales/Partials/profesionalesDialogList.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalesDialogList.html
@@ -3,7 +3,7 @@
         <div class="md-toolbar-tools">
             <h2 class="md-title">Lista Profesionales</h2>
             <span flex></span>
-            <md-button class="md-icon-button" ng-click="closeDialog()">
+            <md-button class="md-icon-button" ng-click="cancel()">
                 <i class="fa fa-times"></i>
             </md-button>
         </div>
@@ -125,7 +125,7 @@
         <md-dialog-actions layout="row" class="bg-primary">
             <span flex></span>
             <md-button class="md-raised" ng-click="guardarLista(selectedItems)">Guardar</md-button>
-            <md-button class="md-raised md-shadow-animated" style="margin-right:20px;" ng-click="closeDialog()">Cancelar</md-button>
+            <md-button class="md-raised md-shadow-animated" style="margin-right:20px;" ng-click="cancel()">Cancelar</md-button>
         </md-dialog-actions>
     
 </md-dialog>
