Modificacion de listados y de perfil de postulante

--- a/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
@@ -146,7 +146,7 @@
                                                 </md-card-title-media>
                                             </md-card-title>
                                             <md-card-content>
-                                                <h3>Valoracion</h3>
+                                                <h3>Valoración</h3>
                                                 <p>{{p.Valoracion}}</p>
                                             </md-card-content>
                                             <md-card-actions layout="row" layout-align="end center">
