Modificacion de listado de convocados a la oferta

--- a/VLaboralWeb/App/Postulantes/Partials/postulanteDetalle.html
+++ b/VLaboralWeb/App/Postulantes/Partials/postulanteDetalle.html
@@ -8,7 +8,7 @@
             <div layout="column" layout-align="end end" flex="50">
 
                 <h3>Valoracion</h3>
-                <jk-rating-stars rating="valoracion" disabled></jk-rating-stars>
+                <jk-rating-stars  read-only="true" rating="valoracion" disabled></jk-rating-stars>
                 <!--<div style="width: 100px">{{valoracion}} Stars</div>-->
             </div>
            
