--- a/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
@@ -2,118 +2,67 @@
 <main class="ad_ofer">
     
     <md-container>        
-        <div class="md-toolbar-tools" style="background-color:rgb(62, 138, 187);">
+        <!--<div class="md-toolbar-tools" style="background-color:rgb(62, 138, 187);">
             <h1>Nueva Oferta</h1>
         </div>    
-        <br />
+        <br />-->
 
         <!--#region fpaz Seccion de datos Basicos de la Oferta-->
-        <md-content layout-padding>           
-            <md-input-container>
-                <h4>Tipo de Oferta:</h4>
-                <md-radio-group ng-model="oferta.Publica" layout="row">
-                    <md-radio-button value=true class="md-primary">Oferta Publica</md-radio-button>
-                    <md-radio-button value=false>Oferta Privada </md-radio-button>
-                </md-radio-group>
-            </md-input-container>
-            
-                
-            <div layout="row">
-                    <md-input-container flex="60">
-                        <label>Nombre de la oferta</label>
-                        <input ng-model="oferta.Nombre">
-                    </md-input-container>
-                </div>
-                
-            <div layout="row">                
-                <md-input-container flex-gt-sm>
-                    <label>Descripcion de la oferta</label>
-                    <textarea ng-model="oferta.Descripcion" md-maxlength="500" rows="20" md-select-on-focus></textarea>
-                </md-input-container>
-            </div>
+        <md-content layout-padding>
+            <div layout="column">
+                <md-card>
+                    <md-toolbar>
+                        <div class="md-toolbar-tools" style="background-color:#09b517"><h3 class="md-title">Datos basicos de la oferta</h3></div>
+                    </md-toolbar>
+                    <md-card-content>
+                        <div layout="row">
+                            <md-input-container flex="60">
+                                <label>Nombre de la oferta</label>
+                                <input ng-model="oferta.Nombre">
+                            </md-input-container>
+                        </div>
 
-            <div layout="row">           
-                <div flex-gt-xs>
-                    <h4>Fecha de Inicio de la Convocatoria:</h4>
-                    <md-datepicker ng-model="oferta.FechaInicioConvocatoria" md-placeholder="Inicio">
-                    </md-datepicker>
-                </div>
+                        <div layout="row">
+                            <md-input-container flex-gt-sm>
+                                <label>Descripcion de la oferta</label>
+                                <textarea ng-model="oferta.Descripcion" md-maxlength="500" rows="20" md-select-on-focus></textarea>
+                            </md-input-container>
+                        </div>
 
-                <div flex-gt-xs>
-                    <h4>Fecha de Fin de la Convocatoria:</h4>
-                    <md-datepicker ng-model="oferta.FechaFinConvocatoria" md-placeholder="Fin">
-                    </md-datepicker>
-                </div>
+                        <div layout="row">
+                            <div flex-gt-xs>
+                                <h4>Fecha de Inicio de la Convocatoria:</h4>
+                                <md-datepicker ng-model="oferta.FechaInicioConvocatoria" md-placeholder="Inicio">
+                                </md-datepicker>
+                            </div>
+
+                            <div flex-gt-xs>
+                                <h4>Fecha de Fin de la Convocatoria:</h4>
+                                <md-datepicker ng-model="oferta.FechaFinConvocatoria" md-placeholder="Fin">
+                                </md-datepicker>
+                            </div>
+                        </div>
+
+                        <md-input-container>
+                            <h4>Tipo de Oferta:</h4>
+                            <br />
+                            <md-radio-group ng-model="oferta.Publica" layout="row">
+                                <md-radio-button value=true class="md-primary">Oferta Publica</md-radio-button>
+                                <md-radio-button value=false>Oferta Privada </md-radio-button>
+                            </md-radio-group>
+                        </md-input-container>
+                    </md-card-content>
+                </md-card>
             </div>
-                        
         </md-content>
+
+
         <!--#endregion-->    
         
-
-        <!--#region fpaz Seccion del LISTADO DE PUESTOS y ETAPAS de la oferta-->
-        <md-content layout-padding>
-            <div layout="row">
-                <!--#region Seccion del LISTADO DE PUESTOS de la oferta-->
-                <div layout="column" flex="60">
-                    <h1 style="text-align:center;">Puestos de la Oferta</h1>
-                    <h1 class="md-title">Cantidad de Puestos Cargados {{oferta.Puestos.length}}</h1>
-                    <div layout="row">
-                        <v-accordion class="vAccordion--default" multiple control="accordion">
-                            <v-pane id="accordionCategorias" ng-repeat="puesto in oferta.Puestos track by $index" expanded="true">
-                                <v-pane-header>
-                                    <label>{{puesto.Nombre}}</label>
-                                </v-pane-header>
-                                <v-pane-content>
-                                    <h1>Contenido del Puesto {{puesto.Nombre}}</h1>
-                                </v-pane-content>
-                            </v-pane>
-                        </v-accordion>
-                    </div>
-
-                    <md-content>
-                        <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-                            <md-button class="md-raised" ng-click="openPuestoAdd()">Agregar Puesto</md-button>
-                        </section>
-                    </md-content>
-                </div>
-                <!--#endregion-->    
-
-                <!--#region Seccion del Timeline de Etapas del Proceso de contratacion de la oferta-->
-                <div layout="column" flex="60">                    
-                    <h1 style="text-align:center;">Etapas de la Oferta</h1>
-                    <timeline>
-                        <timeline-event ng-repeat="etapa in oferta.EtapasOferta" side="alternate">
-                            <!--<timeline-badge >
-                    <i class="glyphicon {{event.badgeIconClass}}"></i>
-                </timeline-badge>-->
-                            <timeline-panel class="{{event.badgeClass}}">
-                                <timeline-heading>
-                                    <div class="flag-wrapper">
-                                        <span class="flag">{{etapa.TipoEtapa.Nombre}}</span>
-                                        <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
-                                    </div>
-                                </timeline-heading>
-                                <div class="desc">
-                                    <p>{{etapa.TipoEtapa.Descripcion}}</p>
-                                </div>
-                            </timeline-panel>
-                        </timeline-event>
-                    </timeline>
-
-                    <md-content>
-                        <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-                            <md-button class="md-raised" ng-click="openEtapaOfertaAdd()">Agregar Etapa</md-button>
-                        </section>
-                    </md-content>
-                </div>
-                <!--#endregion-->    
-            </div>
-        </md-content>
-        <!--#endregion-->
-
-
         <!--#region fpaz Seccion del LISTADO DE PROFESIONALES INVITADOS PARA OFERTAS PRIVADAS-->
+
         <md-content layout-padding ng-show="oferta.Publica =='false'">
+            
             <div layout="column">
                 <h1 style="text-align:center;">Profesionales Invitados</h1>
                 <h1 class="md-title">Cantidad de Profesionales Invitados {{postulantes.length}}</h1>
@@ -146,11 +95,17 @@
                                                 </md-card-title-media>
                                             </md-card-title>
                                             <md-card-content>
-                                                <h3>Valoración</h3>
-                                                <p>{{p.Valoracion}}</p>
+                                                <!--<h3>Valoración</h3>-->
+                                                <div layout="column" layout-align="start start" flex="50">
+
+                                                    <h3>Valoracion</h3>
+                                                    <jk-rating-stars read-only="true" rating="valoracion" disabled></jk-rating-stars>
+                                                    <!--<div style="width: 100px">{{valoracion}} Stars</div>-->
+                                                </div>
                                             </md-card-content>
-                                            <md-card-actions layout="row" layout-align="end center">
-                                                <md-button>Ver Perfil</md-button>
+                                            <md-card-actions layout="row" layout-align="end center">                                                
+                                                <md-button ng-click="abrirDetallePostulante(p)" class="md-primary">Ver Perfil</md-button>
+                                                <md-button ng-click="eliminarPostulante(p)" class="md-warn">Eliminar</md-button>
                                             </md-card-actions>
                                         </md-card>
                                     </md-list-item>
@@ -171,6 +126,84 @@
             </div>
         </md-content>
         <!--#endregion-->
+
+        <!--#region fpaz Seccion del LISTADO DE PUESTOS y ETAPAS de la oferta-->
+        <md-content layout-padding>
+            <div layout="row">
+                
+                <!--#region Seccion del LISTADO DE PUESTOS de la oferta-->
+                <md-card flex="50">
+                    <md-toolbar>
+                        <div class="md-toolbar-tools" style="background-color:#FFB300"><h3 class="md-title">Puestos de la Oferta</h3></div>
+                    </md-toolbar>
+                    <md-card-content>
+                        <!--<h1 style="text-align:center;">Puestos de la Oferta</h1>-->
+                        <h1 class="md-title">Cantidad de Puestos Cargados {{oferta.Puestos.length}}</h1>
+                        <div layout="row">
+                            <v-accordion class="vAccordion--default" multiple control="accordion">
+                                <v-pane id="accordionCategorias" ng-repeat="puesto in oferta.Puestos track by $index" expanded="true">
+                                    <v-pane-header>
+                                        <label>{{puesto.Nombre}}</label>
+                                    </v-pane-header>
+                                    <v-pane-content>
+                                        <h1>Contenido del Puesto {{puesto.Nombre}}</h1>
+                                    </v-pane-content>
+                                </v-pane>
+                            </v-accordion>
+                        </div>
+
+                        <md-content>
+                            <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+                                <md-button class="md-raised" ng-click="openPuestoAdd()">Agregar Puesto</md-button>
+                            </section>
+                        </md-content>
+                    </md-card-content>
+                </md-card>
+                <!--#endregion-->    
+
+                <!--#region Seccion del Timeline de Etapas del Proceso de contratacion de la oferta-->
+                <md-card flex="50">
+                    <md-toolbar>
+                        <div class="md-toolbar-tools" style="background-color:#42A5F5"><h3 class="md-title">Estapas de la Oferta</h3></div>
+                    </md-toolbar>
+                    <md-card-content>
+                        <timeline>
+                            <timeline-event ng-repeat="etapa in oferta.EtapasOferta" side="alternate">
+                                <!--<timeline-badge >
+                <i class="glyphicon {{event.badgeIconClass}}"></i>
+            </timeline-badge>-->
+                                <timeline-panel class="{{event.badgeClass}}">
+                                    <timeline-heading>
+                                        <div class="flag-wrapper">
+                                            <span class="flag">{{etapa.TipoEtapa.Nombre}}</span>
+                                            <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
+                                        </div>
+                                    </timeline-heading>
+                                    <div class="desc">
+                                        <p>{{etapa.TipoEtapa.Descripcion}}</p>
+                                    </div>
+                                </timeline-panel>
+                            </timeline-event>
+                        </timeline>
+
+                        <md-content>
+                            <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+                                <md-button class="md-raised" ng-click="openEtapaOfertaAdd()">Agregar Etapa</md-button>
+                            </section>
+                        </md-content>
+                    </md-card-content>
+                </md-card>
+                <!--<div layout="column" flex="60">                    
+                    <h1 style="text-align:center;">Etapas de la Oferta</h1>
+
+                </div>-->
+                <!--#endregion-->    
+            </div>
+        </md-content>
+        <!--#endregion-->
+
+
+        
 
             
 </md-container>
